[package]
name = "rspc-tungstenite"
description = "tungstenite adapter for rspc"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rspc = { version = "0.2.0", path = "../.." }
serde_json = "1"
tokio = "1.36.0"
tokio-tungstenite = "0.21.0"
tungstenite = "0.21.0"
futures = "0.3.30"